--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-streamlit
-pandas
-numpy
-scikit-learn
-seaborn
-matplotlib
-xgboost
-imblearn
-langchain
-requests
+streamlit>=1.30.0
+pandas>=1.5.3
+numpy>=1.23.5
+scikit-learn>=1.2.2
+matplotlib>=3.7.1
+seaborn>=0.12.2
+xgboost>=1.7.4
+imblearn>=0.0
+requests>=2.31.0
+langchain>=0.1.14
+email-validator>=2.1.0
+langchain>=0.1.14
+langchain-community>=0.0.21
