--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,23 @@ seaborn
 fpdf
 imbalanced-learn
 requests
+streamlit==1.36.0 # Or your installed version
+pandas==2.2.2 # Or your installed version
+numpy==1.26.4 # Or your installed version
+requests==2.32.3 # Or your installed version
+scikit-learn==1.5.0 # Or your installed version
+matplotlib==3.9.0 # Or your installed version
+seaborn==0.13.2 # Or your installed version
+xgboost==2.0.0 # Or your installed version
+imblearn==0.12.2 # For imblearn.over_sampling.SMOTE, usually from imbalanced-learn
+langchain==0.2.7 # Or your installed version
+langchain-community==0.2.7 # Or your installed version
+langchain-together==0.1.3 # The corrected package for TogetherEmbeddings
+tiktoken==0.7.0 # Often a dependency for Langchain's tokenizers
+faiss-cpu==1.8.0 # For FAISS vector store
+pyopenssl==24.1.0 # Common dependency for requests/urllib3, if you encounter SSL issues
+cryptography==42.0.8 # Common dependency for pyopenssl
+
+# You might also need these if they are implicitly used or for specific features:
+# python-dotenv # If you use a .env file for secrets
+# gunicorn # For deploying on some platforms like Heroku
